--- a/front-end/prueba.html
+++ b/front-end/prueba.html
@@ -1,2 +1,3 @@
 <h1>Mi portafolio</h1>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, provident, quia sed laborum, deserunt reiciendis itaque vero saepe quas ipsum nostrum in? Aliquam reiciendis quis ipsum nostrum corrupti deleniti voluptate.</p>
+<h2>Prueba de subir mis cambios</h2>
